# semantic

./: .env.example  .gitignore  .semanticsrc  CLAUDE.md  README.md  debug_runner.py  llm_enhancement_comparison.md  pyproject.toml
.nautex/docs/: PRD.md
semantic/: .gitignore  CLAUDE.md  pyproject.toml
semantic/.nautex/: config.json
semantic/.nautex/docs/: TRD.md
semantic/src/codebase_summarizer/: main.py
semantic/src/services/: __init__.py  llm_client.py  llm_usage_metrics.py
src/codebase_summarizer/: __init__.py  main.py
src/models/: __init__.py  data_models.py
src/parsers/: __init__.py  javascript_parser.py  language_parser_interface.py  python_parser.py
src/services/: __init__.py  analysis_orchestrator.py  config.py  llm_client.py  llm_usage_metrics.py  summary_generator.py  traversal_engine.py  vcs_interface.py
src/services/providers/: __init__.py  anthropic_provider.py  google_provider.py  openai_provider.py
tests/: test_provider_inference.py
